# exam

./: .gitignore  README.md  create_task.html  db.py  index.html  main.html  main.py  pyproject.toml  register.html  tasks.csv  users.csv
.devcontainer/: devcontainer.json
backend/: config.py  db.py
backend/ddl/: __init__.py  create.py  drop.py
backend/dml/: __init__.py  insert.py  select.py
